--- a/home.html
+++ b/home.html
@@ -14,18 +14,21 @@
   background-image: url('/css/searchicon.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
-  width: 100%;
+  width: 80%;
   font-size: 16px;
   padding: 12px 20px 12px 40px;
   border: 1px solid #ddd;
   margin-bottom: 12px;
+
 }
 
 #myTable {
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
   border: 1px solid #ddd;
   font-size: 18px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 #myTable th, #myTable td {
@@ -40,6 +43,16 @@
 #myTable tr.header, #myTable tr:hover {
   background-color: #f1f1f1;
 }
+
+.center-block {
+  margin: auto;
+  display: block;
+}
+
+h2 {text-align: center;}
+
+h3 {text-align: center;}
+
 </style>
 
 
@@ -50,7 +63,9 @@
 
 <h2>Recetario</h2>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar..." title="buscar">
+<input class="center-block" type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar..." title="buscar">
+
+<h3 ><a href="valoraciones">Ver valoraciones</a></h3>
 
 <table id="myTable">
   <tr class="header">
